# minibox

./: .dockerignore  .env.example  .env.nu  .gitflow  .gitignore  .reviewdog.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  GODMODE.tasks.yaml  HANDOFF.md  HANDOFF.minibox.workspace.yaml  Justfile  LICENSE-APACHE  LICENSE-MIT  Modelfile.gpt-oss  README.md  SECURITY.md  SECURITY_FIXES.md  SECURITY_TESTING.md  TESTING.md  TEST_RESULTS.md  USAGE.md  ZOMBIENET_PATTERNS.md  baseline.json  bench_results.txt  deny.toml  librust_out.rlib  mise.toml  mise.toml.disabled  repro.rs  rust_out  rustqual.toml
crates/daemonbox/: Cargo.toml  README.md
crates/daemonbox/src/: handler.rs  lib.rs  network_lifecycle.rs  server.rs  state.rs
crates/daemonbox/tests/: adapter_suite_tests.rs  conformance_boundaries.rs  conformance_helpers.rs  conformance_tests.rs  container_lifecycle_failure_tests.rs  daemon_recovery_tests.rs  handler_adapter_swap_tests.rs  handler_tests.rs  isp_handler_deps_tests.rs  metrics_server_test.rs  proptest_suite.rs  security_regression.rs  state_persistence_tests.rs  state_repository_tests.rs  streaming_tests.rs
crates/dashbox/: Cargo.toml  README.md
crates/dashbox/src/: app.rs  command.rs  diagrams.rs  main.rs  palette.rs  ui.rs
crates/dockerbox/: Cargo.toml  README.md
crates/dockerbox/src/: main.rs
crates/dockerbox/tests/: api_conformance.rs  conformance_container_runtime.rs
crates/linuxbox/: Cargo.toml  README.md
crates/linuxbox/benches/: protocol_codec.rs  trait_overhead.rs
crates/linuxbox/examples/: pull.rs  showcase.rs
crates/linuxbox/src/: domain.rs  error.rs  lib.rs  preflight.rs  protocol.rs
crates/linuxbox/tests/: adapter_colima_tests.rs  adapter_failure_injection_tests.rs  colima_conformance_tests.rs  conformance_adapters.rs  conformance_build.rs  conformance_commit.rs  conformance_limiter.rs  conformance_push.rs  conformance_report.rs  gke_adapter_isolation_tests.rs  image_digest_properties.rs  native_adapter_isolation_tests.rs  proptest_suite.rs  protocol_domain_properties.rs  security_regression.rs  smolvm_conformance_tests.rs
crates/macbox/: Cargo.toml  README.md
crates/macbox/src/: lib.rs  paths.rs  preflight.rs
crates/macbox/tests/: conformance_wiring.rs  krun_adapter_conformance.rs  krun_conformance_tests.rs  vz_adapter_smoke.rs  vz_isolation_tests.rs
crates/mbx/: Cargo.toml  README.md
crates/mbx/benches/: protocol_codec.rs  trait_overhead.rs
crates/mbx/examples/: pull.rs  showcase.rs
crates/mbx/src/: daemonbox_state.rs  domain.rs  lib.rs  main.rs  protocol.rs  terminal.rs
crates/mbx/tests/: adapter_colima_tests.rs  adapter_failure_injection_tests.rs  cli_subprocess.rs  colima_conformance_tests.rs  conformance_build.rs  conformance_cli.rs  conformance_commit.rs  conformance_push.rs  conformance_report.rs  gke_adapter_isolation_tests.rs  image_digest_properties.rs  native_adapter_isolation_tests.rs  proptest_suite.rs  protocol_domain_properties.rs  sandbox_tests.rs  security_regression.rs  smolvm_conformance_tests.rs
crates/mbxctl/: Cargo.toml  README.md  install.sh
crates/mbxctl/src/: client.rs  server.rs
crates/minibox/: Cargo.toml  README.md
crates/minibox-agent/: Cargo.toml  README.md
crates/minibox-agent/src/: agent.rs  conversation.rs  error.rs  events.rs  hooks.rs  lib.rs  message.rs  observation.rs  provider.rs  session_log.rs  step.rs  tools.rs  trace.rs  trajectory.rs
crates/minibox-agent/tests/: conformance_agent_error.rs  proptest_suite.rs
crates/minibox-bench/: Cargo.toml  README.md  schema.json
crates/minibox-bench/src/: main.rs
crates/minibox-cli/: Cargo.toml
crates/minibox-cli/src/: main.rs
crates/minibox-cli/tests/: cli_subprocess.rs
crates/minibox-client/: Cargo.toml  README.md
crates/minibox-client/examples/: request.rs
crates/minibox-client/src/: lib.rs  socket.rs
crates/minibox-client/tests/: conformance_client.rs  conformance_protocol.rs
crates/minibox-core/: Cargo.toml  README.md
crates/minibox-core/src/: domain.rs  error.rs  events.rs  lib.rs  preflight.rs  protocol.rs  trace.rs  tracing_init.rs  typestate.rs
crates/minibox-core/tests/: conformance_domain_traits.rs  conformance_error_model.rs  conformance_events.rs  conformance_image_ref.rs  conformance_metrics.rs  conformance_pty.rs  protocol_evolution.rs
crates/minibox-crux-plugin/: Cargo.toml
crates/minibox-crux-plugin/src/: main.rs
crates/minibox-crux-plugin/tests/: integration.rs
crates/minibox-lib/: Cargo.toml
crates/minibox-lib/benches/: protocol_codec.rs  trait_overhead.rs
crates/minibox-lib/examples/: pull.rs  showcase.rs
crates/minibox-lib/src/: domain.rs  error.rs  lib.rs  macros.rs  preflight.rs  protocol.rs
crates/minibox-lib/tests/: adapter_colima_tests.rs  adapter_failure_injection_tests.rs  image_digest_properties.rs  proptest_suite.rs  protocol_domain_properties.rs
crates/minibox-llm/: Cargo.toml  README.md
crates/minibox-llm/src/: anthropic.rs  chain.rs  config.rs  error.rs  gemini.rs  lib.rs  local.rs  openai.rs  provider.rs  retry.rs  types.rs
crates/minibox-llm/tests/: conformance_llm_provider.rs  proptest_suite.rs
crates/minibox-memory/: Cargo.toml
crates/minibox-memory/src/: domain.rs  layers.rs  lib.rs  search.rs
crates/minibox-memory/tests/: layers_tests.rs  search_tests.rs  store_tests.rs  turso_tests.rs
crates/minibox-oci/: Cargo.toml  README.md
crates/minibox-oci/src/: error.rs  (+1 more)
crates/minibox-secrets/: Cargo.toml  README.md
crates/minibox-testers/: Cargo.toml  README.md
crates/minibox-testsuite/: Cargo.toml
crates/miniboxd/: Cargo.toml  README.md
crates/searchbox/: Cargo.toml  README.md
crates/tailbox/: Cargo.toml  README.md
crates/winbox/: Cargo.toml  README.md
crates/xtask/: Cargo.toml  README.md
crates/zoektbox/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode_request.rs  fuzz_decode_response.rs  fuzz_extract_layer.rs  fuzz_validate_layer_path.rs
mbxctl/: Cargo.toml  install.sh
mbxctl/src/: client.rs  error.rs  main.rs  models.rs  server.rs
(+940 files in other folders)
