[package]
name = "mbxctl"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }

# Internal: protocol types (DaemonRequest, DaemonResponse, etc.)
minibox-core = { path = "../crates/minibox-core" }
