[package]
name = "daemonbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
minibox-core = { workspace = true }
linuxbox = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
prometheus-client = { workspace = true }
dashmap = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1"
