[package]
name = "daemonbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Prometheus /metrics endpoint + prometheus-client recorder
metrics = ["dep:prometheus-client", "dep:axum"]
## OTLP trace export via opentelemetry + tonic
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
minibox-core = { workspace = true }
mbx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

# Optional: Prometheus metrics endpoint (feature = "metrics")
prometheus-client = { workspace = true, optional = true }
axum             = { workspace = true, optional = true }

# Optional: OTLP trace export (feature = "otel")
opentelemetry        = { workspace = true, optional = true }
opentelemetry_sdk    = { workspace = true, optional = true }
opentelemetry-otlp   = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1"
reqwest = { workspace = true }
tokio = { workspace = true }
minibox-core = { workspace = true, features = ["test-utils"] }
async-trait = { workspace = true }
