[package]
name = "dashbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "dashbox"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
