[package]
name = "dockerbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dockerboxd"
path = "src/main.rs"

[lib]
name = "dockerbox"
path = "src/lib.rs"

[dependencies]
minibox-client = { workspace = true }
minibox-core   = { workspace = true }
axum           = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
async-trait    = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
uuid           = { workspace = true, features = ["v4"] }
bytes          = { workspace = true }
tokio-stream   = { workspace = true }
futures        = { workspace = true }
chrono         = { workspace = true }
base64         = { workspace = true }

[dev-dependencies]
tower            = { version = "0.5", features = ["util"] }
http-body-util   = "0.1"
