[package]
name = "linuxbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
minibox-core = { workspace = true }
minibox-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1"
wiremock = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "trait_overhead"
harness = false

[[bench]]
name = "protocol_codec"
harness = false
