[package]
name = "macbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
daemonbox = { workspace = true }
minibox-core = { workspace = true }
mbx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
