[package]
name = "macbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
minibox = { workspace = true }
minibox-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
which = "6"
uuid = { workspace = true }
[dev-dependencies]
minibox-macros = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }
hostname = "0.4"

[[test]]
name = "krun_conformance_tests"

[[test]]
name = "krun_adapter_conformance"
