[package]
name = "mbx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "mbx"
path = "src/main.rs"

[dependencies]
minibox-core = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[features]
# Enable subprocess integration tests (requires a pre-built minibox binary).
# Run via: just test-cli-subprocess
subprocess-tests = []

[package.metadata.cargo-machete]
# base64 is used in commands/run.rs for streaming output decoding
ignored = ["base64"]

[dev-dependencies]
minibox-core = { workspace = true }
minibox-macros = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
