[package]
name = "minibox-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
tempfile.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
minibox-core.workspace = true
minibox.workspace = true
tokio.workspace = true
