[package]
name = "minibox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minibox"
path = "src/main.rs"

[dependencies]
minibox-lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
