[package]
name = "minibox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minibox"
path = "src/main.rs"

[dependencies]
linuxbox = { workspace = true }
minibox-client = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }

[features]
# Enable subprocess integration tests (requires a pre-built minibox binary).
# Run via: just test-cli-subprocess
subprocess-tests = []

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
