[package]
name = "minibox-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["net", "io-util"] }
serde_json = { workspace = true }
minibox-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
