[package]
name = "minibox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cross-platform shared types, domain traits, and protocol for the minibox container runtime"
repository.workspace = true
homepage.workspace = true

[features]
# Enable test double adapters (MockRegistry, MockFilesystem, etc.) for use
# in dev-dependencies of other crates without cfg(test) restrictions.
test-utils = []

[dependencies]
minibox-oci = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
minibox-macros = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
proptest = "1"
base64 = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
