[package]
name = "minibox-crux-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Crux plugin binary exposing minibox container operations via JSON-RPC stdio"

[[bin]]
name = "minibox-crux-plugin"
path = "src/main.rs"

[dependencies]
minibox-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cruxx-plugin = { path = "../../../../../crux/crates/cruxx-plugin" }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
