[package]
name = "minibox-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LLM provider abstraction for the minibox container runtime"
repository.workspace = true
homepage.workspace = true

[features]
default = []
local = ["dep:reqwest"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
