[package]
name = "minibox-oci"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone OCI image-pulling library for Minibox"

[dependencies]
minibox-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
proptest = "1"
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
