[package]
name = "minibox-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Local credential validation and passthrough (1Password, Bitwarden, keyring, env)"

[dependencies]
secrecy     = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }

[dependencies.keyring]
version  = "3"
optional = true

[features]
default     = []
keyring     = ["dep:keyring"]
onepassword = []
bitwarden   = []
