[package]
name = "minibox-testers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
minibox-core = { workspace = true }
minibox = { workspace = true }
daemonbox = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
