[package]
name = "minibox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
minibox-core = { workspace = true }
minibox-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
walkdir = { workspace = true }
tokio-util = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
ipnet = { workspace = true }
dashmap = { workspace = true }
tracing-subscriber = { workspace = true }
slashcrux = { workspace = true }

# Optional: Prometheus metrics endpoint (feature = "metrics")
prometheus-client = { workspace = true, optional = true }
axum             = { workspace = true, optional = true }

# Optional: OTLP trace export (feature = "otel")
opentelemetry        = { workspace = true, optional = true }
opentelemetry_sdk    = { workspace = true, optional = true }
opentelemetry-otlp   = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
## Test infrastructure: mocks, fixtures, conformance helpers (never compile into production)
test-utils = []
## Prometheus /metrics endpoint + prometheus-client recorder
metrics = ["dep:prometheus-client", "dep:axum"]
## OTLP trace export via opentelemetry + tonic
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1"
wiremock = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
macbox = { workspace = true }
# Enable conformance test infrastructure from minibox-core.
minibox-core = { workspace = true, features = ["test-utils"] }

[[bench]]
name = "trait_overhead"
harness = false

[[bench]]
name = "protocol_codec"
harness = false
