[package]
name = "miniboxd"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "miniboxd"
path = "src/lib.rs"

[[bin]]
name = "miniboxd"
path = "src/main.rs"

[features]
default = ["metrics", "otel"]
metrics = ["daemonbox/metrics"]
otel    = ["daemonbox/otel"]

[dependencies]
daemonbox = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
minibox-core = { workspace = true }
mbx = { workspace = true }
nix = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
macbox = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winbox = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }
serde_json = "1"
serial_test = { workspace = true }
